--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase-admin": "^13.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.13"
