--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@headlessui/react": "^2.2.8",
     "@tailwindcss/vite": "^4.1.13",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-cpu": "^4.22.0",
@@ -18,8 +20,12 @@
     "face-api.js": "^0.20.0",
     "firebase": "^12.2.1",
     "firebase-admin": "^13.5.0",
-    "framer-motion": "^12.23.13",
+    "framer-motion": "^12.23.16",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.16",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
@@ -31,6 +37,7 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "@types/node": "^24.5.2",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
